--- a/_talks/jsm-2020-08-04-talk.md
+++ b/_talks/jsm-2020-08-04-talk.md
@@ -8,4 +8,4 @@ date: 2020-08-04
 location: "Philadelphia, PA"
 ---
 
-This is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!
+Virtual JSM year.
