added meat to talks

--- a/_talks/jsm-2020-08-04-talk.md
+++ b/_talks/jsm-2020-08-04-talk.md
@@ -8,4 +8,9 @@ date: 2020-08-04
 location: "Philadelphia, PA"
 ---
 
-Virtual JSM year.
+## Abstract
+Statistical methods are required to evaluate and quantify the uncertainty in environmental processes, such as temperature, in a changing climate. Typically, annual harmonics are used to characterize the variation in the seasonal temperature cycle, overlooking the semi-annual harmonic, which can account for a significant portion of the variance of the seasonal cycle. Together, the spatial variation in the annual and semi-annual harmonics can play an important role in driving processes that are tied to seasonality. We propose a multivariate spatio-temporal model to quantify the spatial and temporal change in minimum and maximum temperature seasonal cycles as a function of the annual and semi-annual harmonics. Our approach captures spatial dependence, temporal dynamics, and multivariate dependence of these harmonics through spatially and temporally-varying coefficients. We apply the model to minimum and maximum temperature over North America for the years 1979 to 2018. Model inference within the Bayesian paradigm enables the identification of regions experiencing significant changes in seasonal temperature cycles due to the relative effects of changes in the two harmonics.
+
+## Slides
+
+[<span style="color:blue"> Slides</span>](https://github.com/jsnowynorth/jsnowynorth.github.io/blob/master/files/JSM_2020_presentation.pdf)
