added image to blog post

--- a/_posts/2021-07-09-blog-post-1.md
+++ b/_posts/2021-07-09-blog-post-1.md
@@ -18,3 +18,5 @@ You can have many headings
 
 Aren't headings cool?
 ------
+
+![Difference in peaks and troughs](/images/figure_11-eps-converted-to.pdf)
