--- a/_posts/2021-07-09-blog-post-1.md
+++ b/_posts/2021-07-09-blog-post-1.md
@@ -1,14 +1,14 @@
 ---
-title: 'Maybe I Will Get To This'
+title: 'Spatial and Temporal Shift in the North American Seasonal Temperature Cycle'
 date: 2021-07-09
 permalink: /posts/2021/07/blog-post-1/
 tags:
-  - Maybe
-  - Get
-  - To It
+  - Harmonic Analysis
+  - Temperature Cycle
+  - Spatio-Temporal Statistics
 ---
 
-This is a sample blog post. Lorem ipsum I can't remember the rest of lorem ipsum and don't have an internet connection right now. Testing testing testing this blog post. Blog posts are cool.
+Does $\alpha = \sum_{i=1}^T \beta_i$ work?
 
 Headings are cool
 ======
