added first bit of blog post

--- a/_posts/2021-07-09-blog-post-1.md
+++ b/_posts/2021-07-09-blog-post-1.md
@@ -8,15 +8,62 @@ tags:
   - Spatio-Temporal Statistics
 ---
 
-Does $\alpha = \sum_{i=1}^T \beta_i$ work?
+In the recent years, you may have heard, or even noticed, the climate is shifting.
+This could be winters beginning sooner or later, more hot summer that last longer, a changing monsoon season, or any number of climate differences.
+The question is, how much has the climate shifted, and is the same everywhere?
+We (my advisors and I) answered this question in [this work](https://onlinelibrary.wiley.com/doi/10.1002/env.2665), which I summarize in this post.
+In our work, we designed a multivariate spatio-temporal model to the spatial and temporal change in minimum and maximum temperature seasonal cycles as a function of the annual and semi-annual harmonics.
 
-Headings are cool
+
+Temperature Data
 ======
 
-You can have many headings
+To determine how much the climate has shifted, we use air temperature (deg C) data at two meters above the surface obtained from the [<span style="color:blue"> National Center for Environmental Prediction (NCEP) Reanalysis</span>](https://www.esrl.noaa.gov/psd/) across the continental United States and portions of Mexico and Canada.
+All temperature time series are centered since the focus is on the harmonics and change in harmonics, as opposed to how the raw temperature has changed.
+In addition, instead of looking at the trend of the mean daily temperature, a shift in the climate regime is more noticeable if we look at the extremes - the minimum and maximum daily temperature.
+Therefore, we extract the daily minimum and maximum temperature for every day between 1979 and 2018, and use that for the analysis.
+
+Now, what does it mean for the climate to shift?
+We can represent the temperature at a location for a year in terms of its annual and semi-annual harmonics.
+The annual harmonic, or the seasonal cycle, is a direct response to Earth's orbit around the sun.
+However, the atmospheric response to the sun crossing the equator twice a year suggests there is a semi-annual component to the temperature cycle, and so we choose to represent the yearly temperature cycle with the two harmonics.
+
+Mathematically, let $z_t$ denote temperature (say, minimum or maximum) on day $t$ where $t = 1, \dots, T$, and $T$ is the number of days in the year (365 or 366 for leap years).
+The Fourier series representation of the time series, expressed in amplitude-phase form, is given as
+
+$$z_t = a_0 + \sum_{h=1}^{\lfloor T/2 \rfloor} A_h \cos \Big(\frac{2 \pi h t}{T} + \varphi_h \Big),$$
+
+where $A_h$ and $\varphi_h$ are the amplitude and phase, respectively, for the $h^{th}$ harmonic component.
+Alternatively, we can parameterize the Fourier series in terms of Fourier coefficients,
+
+$$z_t = a_0 + \sum_{h=1}^{\lfloor T/2 \rfloor} a_h \cos \Big( \frac{2 \pi t h}{T} \Big) + b_h \sin \Big( \frac{2 \pi t h}{T} \Big),$$
+
+where $a_h$ and $b_h$ are the Fourier coefficients for the $h^{th}$ harmonic, related to the amplitude by $A_h = \sqrt{a^2_h + b^2_h}, \,\, A_h \in [0, \infty)$, and the phase by $\varphi_h = \tan^{-1}(-b_h/a_h), \, \varphi_h \in [-\pi/h, \pi/h]$.
+Here we are only concerned with the first two harmonics (i.e., $h=1, 2$, where $h=1$ and $h=2$ correspond to the annual and semi-annual harmonic, respectively), and will refer to a "cycle" as the sum of the first and second harmonics hereafter.
+
+Now, if we have some method of estimating $a_h$ and $b_h$ for $h=1,2$ (and we do), we can then compare the estimates at different times and different locations to see how the climate is shifting.
+For example, the figure below shows the estimated cycle with only the annual component (dashed) and the estimated cycle with the annual and semi-annual components (solid) at two locations for two different years.
+The bottom panel shows the difference, and highlights not only the impact of the semi-annual component, but how the estimated temperature cycle is changing.
+
+![Shift over Texas and Kings](/images/blog_1/shift_over_kings_canyon.pdf)
+
+Bayesian Hierarchical Model
 ======
 
-Aren't headings cool?
+**Goal:** Quantify the spatial and temporal change in minimum and maximum temperature seasonal cycles as a function of the annual and semi-annual harmonics.
+
+  1. Capture spatial dependence
+  2. Capture temporal dynamics
+  3. Capture multivariate dependence of these harmonics through spatially and temporally-varying coefficients
+
+
+Results
 ------
 
-![Difference in peaks and troughs](/images/figure_11-eps-converted-to.pdf)
+- Modeled the spatial and temporal change in minimum and maximum temperature seasonal cycles as a function of the annual and semi-annual harmonics
+- Used the predictive process for spatial dimension reduction
+- Obtained inference on the amplitude and phase of the annual and semi-annual harmonics
+- Highlighted areas where the seasonal temperature cycle has changed
+- Highlighted the importance of including the semi-annual harmonic when investigating the change in seasonal cycle
+
+![Difference in peaks and troughs](/images/blog_1/impact_of_semi.pdf)
