--- a/_posts/2021-07-09-blog-post-1.md
+++ b/_posts/2021-07-09-blog-post-1.md
@@ -1,97 +1,7 @@
 ---
-title: 'Spatial and Temporal Shift in the North American Seasonal Temperature Cycle'
+title: 'To Come'
 date: 2021-07-09
 permalink: /posts/2021/07/blog-post-1/
 tags:
-  - Harmonic Analysis
-  - Temperature Cycle
-  - Spatio-Temporal Statistics
+  - Something insightful
 ---
-
-In the recent years, you may have heard, or even noticed, the climate is shifting.
-This could be winters beginning sooner or later, more hot summer that last longer, a changing monsoon season, or any number of climate differences.
-The question is, how much has the climate shifted, and is the same everywhere?
-We (my advisors and I) address this question in one of [our papers](https://onlinelibrary.wiley.com/doi/10.1002/env.2665), which I summarize in this post.
-In our work, we designed a multivariate spatio-temporal model to the spatial and temporal change in minimum and maximum temperature seasonal cycles as a function of the annual and semi-annual harmonics.
-
-
-Temperature Data
-======
-
-To determine how much the climate has shifted, we use air temperature (deg C) data at two meters above the surface obtained from the [<span style="color:blue"> National Center for Environmental Prediction (NCEP) Reanalysis</span>](https://www.esrl.noaa.gov/psd/) across the continental United States and portions of Mexico and Canada.
-All temperature time series are centered since the focus is on the harmonics and change in harmonics, as opposed to how the raw temperature has changed.
-In addition, instead of looking at the trend of the mean daily temperature, a shift in the climate regime is more noticeable if we look at the extremes - the minimum and maximum daily temperature.
-Therefore, we extract the daily minimum and maximum temperature for every day between 1979 and 2018, and use that for the analysis.
-
-Now, what does it mean for the climate to shift?
-We can represent the temperature at a location for a year in terms of its annual and semi-annual harmonics.
-The annual harmonic, or the seasonal cycle, is a direct response to Earth's orbit around the sun.
-However, the atmospheric response to the sun crossing the equator twice a year suggests there is a semi-annual component to the temperature cycle, and so we choose to represent the yearly temperature cycle with the two harmonics.
-
-Mathematically, let $z_t$ denote temperature (say, minimum or maximum) on day $t$ where $t = 1, \dots, T$, and $T$ is the number of days in the year (365 or 366 for leap years).
-The Fourier series representation of the time series, expressed in amplitude-phase form, is given as
-
-$$z_t = a_0 + \sum_{h=1}^{\lfloor T/2 \rfloor} A_h \cos \Big(\frac{2 \pi h t}{T} + \varphi_h \Big),$$
-
-where $A_h$ and $\varphi_h$ are the amplitude and phase, respectively, for the $h^{th}$ harmonic component.
-Alternatively, we can parameterize the Fourier series in terms of Fourier coefficients,
-
-$$z_t = a_0 + \sum_{h=1}^{\lfloor T/2 \rfloor} a_h \cos \Big( \frac{2 \pi t h}{T} \Big) + b_h \sin \Big( \frac{2 \pi t h}{T} \Big),$$
-
-where $a_h$ and $b_h$ are the Fourier coefficients for the $h^{th}$ harmonic, related to the amplitude by $A_h = \sqrt{a^2_h + b^2_h}, \,\, A_h \in [0, \infty)$, and the phase by $\varphi_h = \tan^{-1}(-b_h/a_h), \, \varphi_h \in [-\pi/h, \pi/h]$.
-Here we are only concerned with the first two harmonics (i.e., $h=1, 2$, where $h=1$ and $h=2$ correspond to the annual and semi-annual harmonic, respectively), and will refer to a "cycle" as the sum of the first and second harmonics hereafter.
-
-Now, if we have some method of estimating $a_h$ and $b_h$ for $h=1,2$ (and we do), we can then compare the estimates at different times and different locations to see how the climate is shifting.
-To give an example of what an estimated cycle could look like, and the impact the semi-annual component has on the cycle, we look at two scenarios.
-The figure below shows the estimated cycle with only the annual component (dashed) and the estimated cycle with the annual and semi-annual components (solid), which I will term the full cycle, at two locations for two different years.
-The bottom panel shows the difference between the annual and full cycles, highlighting not only the impact of the semi-annual component but how the estimated temperature cycle changes over time.
-
-![Shift over Texas and Kings](/images/blog_1/shift_over_kings_canyon.pdf)
-
-Bayesian Hierarchical Model
-======
-
-Here, I will discuss our model to infer how the temperature cycle has shifted over time.
-The goal of our model is to quantify the spatial and temporal change in minimum and maximum temperature seasonal cycles as a function of the annual and semi-annual harmonics.
-There are 3 main components to our model:
-
-  1. A component to capture spatial dependence
-  2. A component to capture temporal dynamics
-  3. A component to capture the multivariate dependence between the the harmonics of the minimum and maximum cycles through spatially and temporally-varying coefficients
-
-Now, I have no interest in writing out the full model, as I am sure you (assuming anyone reads this) have no interest in reading a bunch of math.
-Instead, I will do my best to distill the model.
-
-Let $\vz_{1\ell}(\vs) = [z_{11}(\vs), ..., z_{1T_{\ell}}(\vs)]'$ and $\vz_{2\ell}(\vs) = [z_{21}(\vs), ..., z_{2T_{\ell}}(\vs)]'$ denote minimum and maximum temperature, respectively, where $T_{\ell}$ is the number of days in year year $\ell = 1, ..., L$, at location $\vs \in \{ \vs_1, ..., \vs_n\}$.
-The linear model for temperature is
-\begin{align*}
-    \vz_{j\ell}(\vs) = \vX_{\ell}\vbe_{j\ell}(\vs) + \vep_{j\ell}(\vs) \qquad j = 1,2,
-\end{align*}
-where
-\begin{align*}
-	\vX_{\ell} = \Big[ & \cos(2 \pi (t-1)/T_{\ell}), \sin(2 \pi (t-1)/T_{\ell}), \\
-	 & \cos(4 \pi (t-1)/T_{\ell}), \sin(4 \pi (t-1)/T_{\ell})\Big]_{t = 1, ..., T_{\ell}},
-\end{align*}
-$\vbe_{j\ell}(\vs) = [a_1(\vs), b_1(\vs), a_2(\vs), b_2(\vs)]'$,  and  $\vep_{j\ell}(\vs)$ are iid $\Gau(0, \sigma^2_{\varepsilon_j}(\vs)\,\vI_{T_{\ell}})$.
-
-The spatially varying harmonic coefficients evolve according to a random walk:
-\begin{align*}
-    \vbe_{\ell}(\vs) \mid \vbe_{\ell-1}(\vs),\vw_{\ell}(\vs) \sim \Gau\left(\vbe_{\ell-1}(\vs) + \vw_{\ell}(\vs), \vSig_{\beta}\right)
-\end{align*}
-where
-$\vbe_{\ell}(\vs) = \left[\vbe_{1\ell}(\vs)^{'}, \vbe_{2\ell}(\vs)^{'}\right]^{'}$, $\vSig_{\beta}$ is an $8 \times 8$ unstructured covariance matrix,
-$\vw_{\ell}(\vs) = \left[\vw_{1\ell}(\vs)^{'},\vw_{2\ell}(\vs)^{'}\right]^{'}$ with $\vw_{j\ell}(\vs) = [w_{j1\ell}(\vs), ..., w_{j4\ell}(\vs)]'$, and
-\begin{align*}
-    w_{jk\ell}(\vs) \overset{\text{ind.}}{\sim} Gaussian \, Process\left(0, C\left(\cdot; \vtheta_{jk}\right)\right).
-\end{align*}
-
-Results
-------
-
-- Modeled the spatial and temporal change in minimum and maximum temperature seasonal cycles as a function of the annual and semi-annual harmonics
-- Used the predictive process for spatial dimension reduction
-- Obtained inference on the amplitude and phase of the annual and semi-annual harmonics
-- Highlighted areas where the seasonal temperature cycle has changed
-- Highlighted the importance of including the semi-annual harmonic when investigating the change in seasonal cycle
-
-![Difference in peaks and troughs](/images/blog_1/impact_of_semi.pdf)
